// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders correctly with dir 1`] = `
<DocumentFragment>
  .cache-ny0fsg-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: start;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
    style="margin-bottom: 16px; margin-top: 8px; width: 500px;"
  >
    <div
      class="cache-ny0fsg-StyledText e13y3mga0"
      dir="rtl"
    >
      This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with htmlFor 1`] = `
<DocumentFragment>
  .cache-rc6e0e-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: start;
}

<div
    style="margin-bottom: 16px; margin-top: 8px; width: 500px;"
  >
    <div
      class="cache-rc6e0e-StyledText e13y3mga0"
      for="test"
    >
      This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with placement 1`] = `
<DocumentFragment>
  .cache-1cxatcj-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: end;
}

<div
    style="margin-bottom: 16px; margin-top: 8px; width: 500px;"
  >
    <div
      class="cache-1cxatcj-StyledText e13y3mga0"
    >
      This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with tooltip 1`] = `
<DocumentFragment>
  .cache-ny0fsg-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: start;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
    style="margin-bottom: 16px; margin-top: 8px; width: 500px;"
  >
    <div
      class="cache-ny0fsg-StyledText e13y3mga0"
    >
      This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="body" 1`] = `
<DocumentFragment>
  .cache-rc6e0e-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: start;
}

<div
    class="cache-rc6e0e-StyledText e13y3mga0"
  >
    body
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodySmall" 1`] = `
<DocumentFragment>
  .cache-19pb5nc-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: start;
}

<div
    class="cache-19pb5nc-StyledText e13y3mga0"
  >
    bodySmall
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodySmallStrong" 1`] = `
<DocumentFragment>
  .cache-k99fbx-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: start;
}

<div
    class="cache-k99fbx-StyledText e13y3mga0"
  >
    bodySmallStrong
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodySmallStronger" 1`] = `
<DocumentFragment>
  .cache-bwfoav-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Asap;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: start;
}

<div
    class="cache-bwfoav-StyledText e13y3mga0"
  >
    bodySmallStronger
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodyStrong" 1`] = `
<DocumentFragment>
  .cache-1jhb3xm-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: start;
}

<div
    class="cache-1jhb3xm-StyledText e13y3mga0"
  >
    bodyStrong
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodyStronger" 1`] = `
<DocumentFragment>
  .cache-1kxpsp1-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: start;
}

<div
    class="cache-1kxpsp1-StyledText e13y3mga0"
  >
    bodyStronger
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="caption" 1`] = `
<DocumentFragment>
  .cache-1py36dp-StyledText {
  color: #3f4250;
  font-size: 12px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: start;
}

<div
    class="cache-1py36dp-StyledText e13y3mga0"
  >
    caption
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="captionSmall" 1`] = `
<DocumentFragment>
  .cache-i1rkod-StyledText {
  color: #3f4250;
  font-size: 10px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: start;
}

<div
    class="cache-i1rkod-StyledText e13y3mga0"
  >
    captionSmall
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="code" 1`] = `
<DocumentFragment>
  .cache-19vmlqm-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: start;
}

<div
    class="cache-19vmlqm-StyledText e13y3mga0"
  >
    code
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="heading" 1`] = `
<DocumentFragment>
  .cache-krkzuh-StyledText {
  color: #3f4250;
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: start;
}

<div
    class="cache-krkzuh-StyledText e13y3mga0"
  >
    heading
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="headingLarge" 1`] = `
<DocumentFragment>
  .cache-i0ezw-StyledText {
  color: #3f4250;
  font-size: 35px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 48px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: start;
}

<div
    class="cache-i0ezw-StyledText e13y3mga0"
  >
    headingLarge
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="headingSmall" 1`] = `
<DocumentFragment>
  .cache-4mvqtl-StyledText {
  color: #3f4250;
  font-size: 21px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: start;
}

<div
    class="cache-4mvqtl-StyledText e13y3mga0"
  >
    headingSmall
  </div>
</DocumentFragment>
`;

exports[`Text with disabled 1`] = `
<DocumentFragment>
  .cache-1390si6-StyledText {
  color: #b5b7bd;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: start;
}

<div
    class="cache-1390si6-StyledText e13y3mga0"
  >
    Lorem Ipsum
  </div>
</DocumentFragment>
`;

exports[`Text with italic 1`] = `
<DocumentFragment>
  .cache-1b4r7p-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: start;
  font-style: italic;
}

<div
    class="cache-1b4r7p-StyledText e13y3mga0"
  >
    Lorem Ipsum
  </div>
</DocumentFragment>
`;

exports[`Text with multiple nested chidldren renders correctly 1`] = `
<DocumentFragment>
  .cache-rc6e0e-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: start;
}

.cache-krkzuh-StyledText {
  color: #3f4250;
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: start;
}

<div
    class="cache-rc6e0e-StyledText e13y3mga0"
  >
    Lorem
    <span>
      Ipsum
    </span>
    <span
      class="cache-krkzuh-StyledText e13y3mga0"
    >
      <span>
        Dolor
      </span>
    </span>
    Sit
  </div>
</DocumentFragment>
`;

exports[`Text with prominence stronger on non neutral 1`] = `
<DocumentFragment>
  .cache-kv5lv0-StyledText {
  color: #b3144d;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: start;
}

<div
    class="cache-kv5lv0-StyledText e13y3mga0"
  >
    Lorem Ipsum
  </div>
</DocumentFragment>
`;

exports[`Text with underline 1`] = `
<DocumentFragment>
  .cache-up9c3e-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: start;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="cache-up9c3e-StyledText e13y3mga0"
  >
    Lorem Ipsum
  </div>
</DocumentFragment>
`;
